--- a/src/app/components/pages/membership/membership.component.scss
+++ b/src/app/components/pages/membership/membership.component.scss
@@ -10,17 +10,18 @@
 }
 
 
-/* .body {
+.body {
     position: relative;
 
     min-height: 100vh;
     height: auto;
     width: 100%;
 
-    padding: 20px;
+    /* padding: 20px; */
 
-    background-color: #E4EBF5;
-} */
+    background-color: #efeff2;
+    border: 20px solid #efeff2;
+}
 
 .wrapper {
   position: relative;
@@ -46,6 +47,9 @@
   color:orange;
 
   text-align: center;
+
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 
@@ -66,7 +70,7 @@
     position: relative;
 
     width: 28%;
-    height: 800px;
+    height: fit-content;
 
     background-color:#efeff2;
     opacity: 100%;
@@ -87,7 +91,7 @@
       height: fit-content;
       width: 100%;
 
-      padding: 40px 25px 25px;
+      padding: 40px 25px 20px;
 
       text-align: center;
 
@@ -113,6 +117,8 @@
       padding-bottom: 40px;*/
 
       text-align: center;
+      border: 0px !important;
+
     }
     & > .footer {
       & > .btn{
@@ -131,38 +137,37 @@
   }
 }
 
-  .step{
-    position: relative;
+.step{
+  position: relative;
 
-    padding: 20px;
+  padding: 20px;
 
-    margin-left: 30%;
-    margin-right:20%;
+  margin-left: 30%;
+  margin-right:20%;
 
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+
+.ui-button {
+  & > .ui-state {
 
   }
+}
+.ui-button.ui-state-default.ui-button-warning{
+  background-color: white !important;
+    border: 2px solid #ef8216 !important;
+}
 
+.cb-type {
+  display: flex;
+  position: relative;
 
-  .ui-button {
-    & > .ui-state {
+  justify-content: space-around;
+}
 
-    }
-  }
-  .ui-button.ui-state-default.ui-button-warning{
-    background-color: white !important;
-      border: 2px solid #ef8216 !important;
-  }
-
-  .ui-inputgroup{
-    display: flex;
-    //padding: 40%;
-
-
-    margin-left: auto;
-    margin-right: auto;
-  }
 
 
 
