--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -49,7 +49,8 @@
     </div>
 
     <div class="body">
-        <p-carousel [value]="news" [numVisible]="3" [numScroll]="1" [responsiveOptions]="this.carousel.responsive" [autoplayInterval]="5000">
+        <!-- [responsiveOptions]="this.carousel.responsive" -->
+        <p-carousel *ngIf="this.loaded" [value]="news" [numVisible]="2" [numScroll]="1" [autoplayInterval]="5000">
             <ng-template let-news pTemplate="item">
                 <div class="ui-g hcarousel-item">
                     <div class="ui-g-6">
