--- a/src/app/components/pages/user/membership/membership.component.html
+++ b/src/app/components/pages/user/membership/membership.component.html
@@ -1,1 +1,22 @@
-asdj;lasd;alsdj;lasdj;lasdj
+<div class="body">
+    <div class="p-col-2">
+    
+    </div>
+    <div class="p-col-8">
+      <div class="title">
+        <span>Subscription Information</span>
+      </div> 
+        Member No
+        <hr>
+        Username
+        <hr>
+        Membership Level
+        <hr>
+        Membership Status
+        <hr>
+        Member Since
+
+    </div>
+    <div class="p-col-2">
+    </div>
+</div>
