--- a/src/app/components/pages/membership/membership.component.scss
+++ b/src/app/components/pages/membership/membership.component.scss
@@ -10,14 +10,12 @@
 }
 
 
-.body {
+.main-body {
     position: relative;
 
     min-height: 100vh;
     height: auto;
     width: 100%;
-
-    /* padding: 20px; */
 
     background-color: #efeff2;
     border: 20px solid #efeff2;
@@ -27,11 +25,113 @@
   position: relative;
 
   height: auto;
+  
+  /* max-width: 1248px; */
   width: 100%;
+
+  /* margin-left: auto;
+  margin-right: auto; */
 
   padding: 20px;
 
   background-color: #fff;
+}
+
+.stepper {
+  position: relative;
+
+  width: 90%;
+  height: fit-content;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  margin-top: 60px;
+
+  & > .line-placeholder {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+
+    height: 8px;
+    width: 100%;
+
+    background-color: gainsboro;
+
+    z-index: 1;
+  }
+
+  & > .line {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+
+    background-color: orange;
+
+    height: 8px;
+    width: 0%;
+
+    z-index: 2;
+
+    transition: .3s all;
+    transition-delay: .6s;
+  }
+
+  & > .items {
+    display: flex;
+    justify-content: space-between;
+
+    position: relative;
+
+    z-index: 3;
+
+    & > .item {
+      position: relative;
+      
+      height: 100px;
+      width: 100px;
+
+      background-color: white;
+
+      border-radius: 50%;
+      border: 3px solid orange;
+
+      line-height: 100px;
+      text-align: center;
+
+      font-size: 30px;
+
+      transition: .3s all;
+      transition-delay: .6s;
+      &.active {
+        background-color: orange;
+      }
+
+    }
+
+    & > .label {
+      position: relative;
+      
+      height: auto;
+      width: 100px;
+
+      font-size: 15px;
+
+      text-align: center;
+
+      color: black;
+
+      transition: .3s all;
+      &.active {
+        color: orange;
+      }
+
+    }
+  }
+
+
 }
 
 .title{
@@ -69,6 +169,7 @@
   & > .pricing-card {
     position: relative;
 
+    min-height: 100vh;
     width: 28%;
     height: fit-content;
 
@@ -137,37 +238,151 @@
   }
 }
 
-.step{
+.msgbox-success {
   position: relative;
+
+  height: fit-content;
 
   padding: 20px;
 
-  margin-left: 30%;
-  margin-right:20%;
+  & > .header {
+    position: relative;
 
-  display: flex;
-  justify-content: space-between;
+    font-size: 25px;
+    font-weight: bolder;
 
-}
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 3px;
 
+    margin-bottom: 15px;
+  }
 
-.ui-button {
-  & > .ui-state {
+  & > .body {
+    position: relative;
 
+    font-size: 18px;
+    font-weight: 400;
+
+    letter-spacing: 1px;
+
+    text-align: center;
+    & > span {
+      display: block;
+
+      padding: 5px;
+    }
+  }
+
+  & > .footer {
+    margin-top: 100px;
+
+    display: flex;
+
+    justify-content: space-between;
+
+    text-align: center;
+    & > div {
+      width: 300px;
+
+      & > span {
+        display: block;
+
+        padding: 5px;
+      }
+    }
   }
 }
+
+/* .step{
+  position: relative;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 80%;
+
+  display: flex;
+  justify-content: space-around;
+
+} */
+
+
+//.ui-button {
+ // & > .ui-state {
+
+//  }
+//}
+
 .ui-button.ui-state-default.ui-button-warning{
   background-color: white !important;
     border: 2px solid #ef8216 !important;
 }
 
-.cb-type {
+.input-txt-1 {
+  width: 300px;
+}
+
+// overwrite PrimeNg style here
+
+:host {
+  ::ng-deep {
+
+    &.ui-steps-number {
+      height: 70px !important;
+      width: 70px !important;
+
+      line-height: 70px !important;
+    }  
+
+    &.ui-steps {
+      display: flex !important;
+      justify-content: space-between !important;
+    }  
+
+  }
+
+    
+}
+/* 
+  .yourStyle2 { color: #000000; } 
+}*/
+
+/* .cb-type {
   display: flex;
   position: relative;
 
   justify-content: space-around;
 }
+ */
 
+ /*css register*/
 
+ .section {
+   padding-top:60px;
+   padding-bottom: 60px;
+
+   
+  & > div > div > .hover-color{
+    background-color: #fff;
+    border: 2px solid  #0f2557;
+    padding: 25px;
+    text-align:center;
+
+    /*& > .hover-color-bg{
+      background: #ffffff;
+      border: 2px solid  #0f2557;
+   }*/
+  } 
+  & > div > div > .hover-color:hover{
+    background: #ffffff;
+    border: 2px solid  #ffa500;
+  }
+
+  & > .cont{
+     padding-top:20px;
+   }
+ }
+ 
 
 
